# KAMTOF

./: .gitignore  CMakeLists.txt  License.md  README.md
cpu_framework/: CMakeLists.txt
cpu_framework/include/: cpu_framework_enums.h  cpu_globals.h  dataset.h  datasetbase.h  datasetstorage.h  fp_data_types.h  indexdataset.h  mpi_utils.h  silo.h  silo_fwd.h  silo_utils.h
cpu_framework/include/detail/: dataset.hpp  datasetstorage.hpp  extractor.hpp  logger.hpp  silo.hpp
cpu_framework/src/: datasetbase.cpp  mpi_utils.cpp  silo.cpp  silo_utils.cpp
cpu_framework/test/src/: cpu_framework_test.cpp  global_definitions_test.cpp
gpu_framework/: CMakeLists.txt
gpu_framework/include/: datasetbasegpu.h  datasetgpu.h  datasetstoragegpu.h  gpu_api_functions.h  gpu_enums.h  gpu_globals.h  gpu_helpers.h  gpu_instance_t.h  gpu_manager_t.h  gpu_silo_fwd.h  oneMathSPMV.h  pagefault_handler.h
gpu_framework/include/detail/: datasetgpu.hpp  datasetstoragegpu.hpp  gpu_manager_t.hpp
gpu_framework/include/utils/: gpu_atomics.h
gpu_framework/src/: GPUInstance_t.cpp  datasetbase_gpu_funcs_impl.cpp  datasetbasegpu.cpp  gpu_api_functions.cpp  gpu_helpers.cpp  gpu_manager_t.cpp  gpu_math_api_functions.cpp  oneMathSPMV.cpp  pagefault_handler.cpp
gpu_framework/test/include/: test_funcs.h  test_kernels.h
gpu_framework/test/src/: demonstrate_temp_write.cpp  global_definitions_test.cpp  gpu_framework_test.cpp  porting_stage_scenario.cpp  test_funcs.cpp  test_kernels.cpp
input_files/: laplace.in
scripts/: build.sh  build_kamtof.sh  export_roots.sh  install_kamtof.sh  run_laplace_solver.sh  setup_env.sh
scripts/env/: cuda.sh  hpcx.sh  oneAPI.sh  oneMath.sh  rocm.sh
scripts/post_processing/: analytical_laplace_solution.py  laplace_template.in  run_convergence_study.sh
solver/cpu/include/: grid.h  input_parser.h  mpiclass.h  solver.h
solver/cpu/src/: global_definitions.cpp  grid.cpp  input_parser.cpp  main.cpp  solver_base.cpp
solver/gpu/include/: solver_gpu.h
solver/gpu/src/: gpu_globals.cpp  solver_base_gpu.cpp
